--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>&#127881Tab Birthdays!&#127881</h1>
+    <div style="height: 50px;"></div>
+    <div id="sample">
+
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
