--- a/hello.html
+++ b/hello.html
@@ -3,11 +3,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>&#127881Tab Birthdays!&#127881</h1>
-    <div style="height: 50px;"></div>
-    <div id="sample">
+    <p>&#127881Tab Birthdays!&#127881</p>
 
-    </div>
     <script src="popup.js"></script>
   </body>
 </html>
